trunk/Archive2/54/bf9bd694c9c990/output
main.cpp: In function 'int main()':
main.cpp:6:18: error: no matching function for call to 'exchange(unsigned int&, int)'
     exchange(a, 0);
                  ^
main.cpp:6:18: note: candidate is:
main.cpp:2:3: note: template<class T> T exchange(T&, T)
 T exchange(T& a, T b);
   ^
main.cpp:2:3: note:   template argument deduction/substitution failed:
main.cpp:6:18: note:   deduced conflicting types for parameter 'T' ('unsigned int' and 'int')
     exchange(a, 0);
                  ^
